--- a/app/src/main/res/layout/activity_invoicedetails.xml
+++ b/app/src/main/res/layout/activity_invoicedetails.xml
@@ -58,27 +58,21 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/textView7"
-                android:layout_width="95dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="15dp"
-                app:cardCornerRadius="3dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/tvCountDownTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#E80202"
-                    android:fontFamily="@font/be_vietnam_bold"
-                    android:gravity="center"
-                    android:text="ĐÃ HỦY"
-                    android:textColor="@color/white"
-                    android:textSize="18dp" />
-            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/tvCountDownTime"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                style="@style/Text"
+                android:textColor="#ED5656"
+                android:layout_marginHorizontal="120dp"
+                android:background="@drawable/bg_btn_repurchase"
+                android:gravity="center"
+                android:text="Hủy Đơn Hàng"
+                android:textSize="18dp"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,7 +85,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7">
+                app:layout_constraintTop_toBottomOf="@+id/tvCountDownTime">
 
                 <TextView
                     android:id="@+id/textView34"
