--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -82,8 +82,10 @@
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
+            android:gravity="center"
             style="@style/loginFacebook"
             android:layout_width="match_parent"
+
             android:paddingTop="13dp"
             android:paddingBottom="13dp"
             android:textSize="18sp"
@@ -164,7 +166,7 @@
         android:id="@+id/imageView5"
         android:layout_width="0dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
@@ -175,7 +177,7 @@
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
