--- a/app/src/main/res/layout/fragment_add_address.xml
+++ b/app/src/main/res/layout/fragment_add_address.xml
@@ -63,7 +63,7 @@
         android:layout_marginHorizontal="25dp"
         android:layout_marginTop="10dp"
         android:drawableRight="@drawable/ic_map_search"
-        android:hint="Vd: "
+        android:hint="VD: Trường Cao Đẳng FPT Polytechnic,Trịnh Văn Bô..."
         android:paddingRight="10dp"
         style="@style/Text"
         android:textSize="14sp"
@@ -91,7 +91,7 @@
         android:layout_height="45dp"
         android:layout_marginHorizontal="25dp"
         android:layout_marginTop="10dp"
-        android:hint="Nhà"
+        android:hint="VD: Nhà, Công Ty"
         style="@style/Text"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
