--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -242,22 +242,39 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/btnupdatecus"
+        android:id="@+id/btnedit"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="80dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginBottom="35dp"
         android:background="@drawable/bg_btn"
         android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
-        android:text="Lưu"
+        android:text="Sửa Thông Tin"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/btnsave"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/bg_btn"
+        android:fontFamily="@font/be_vietnam_bold"
+        android:gravity="center"
+        android:text="Lưu Thông Tin"
         android:visibility="gone"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline15"
         android:layout_width="wrap_content"
