--- a/app/src/main/res/layout/fragment_polic.xml
+++ b/app/src/main/res/layout/fragment_polic.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/img_back_policy"
-            android:layout_width="7dp"
-            android:layout_height="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:src="@drawable/ic_back"
             app:layout_constraintBottom_toBottomOf="@+id/textView26"
