--- a/app/src/main/res/layout/item_cart_products.xml
+++ b/app/src/main/res/layout/item_cart_products.xml
@@ -30,12 +30,13 @@
 
         </androidx.cardview.widget.CardView>
     </FrameLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_marginRight="10dp"
-        android:background="@drawable/bg_borders_sp"
+        android:id="@+id/constraint"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
-        android:id="@+id/constraint">
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/bg_borders_sp">
 
 
         <androidx.cardview.widget.CardView
@@ -55,17 +56,18 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/img_sp" />
         </androidx.cardview.widget.CardView>
+
         <TextView
-            android:fontFamily="@font/be_vietnam_medium"
             android:id="@+id/tvname"
+            style="@style/Text"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/be_vietnam_medium"
             android:text="Cơm gà nướng mật ong"
             android:textColor="@color/black"
             android:textSize="18sp"
-            style="@style/Text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView6"
             app:layout_constraintTop_toTopOf="parent" />
@@ -77,13 +79,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline25"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/cardView6"
             app:layout_constraintTop_toBottomOf="@+id/tvname">
 
             <TextView
                 android:id="@+id/tvsoluong"
                 style="@style/Text"
-                android:layout_width="10dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="1"
@@ -117,12 +121,21 @@
             android:id="@+id/tvprice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
             android:fontFamily="@font/be_vietnam_medium"
             android:text="45.000 đ"
             android:textColor="@color/black"
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/constraintLayout8"
+            app:layout_constraintStart_toStartOf="@+id/guideline25" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.75" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.apachat.swipereveallayout.core.SwipeLayout>
