--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,10 +1,10 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="125dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
-    android:background="@drawable/bg_borders_sp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/bg_borders_sp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView6"
@@ -35,17 +35,19 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_baseline_favorite_border_24"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline34" />
 
     <TextView
         android:id="@+id/tv_name"
+        style="@style/Text"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
-        style="@style/Text"
-        android:text="Cơm gà nướng mật ong"
         android:fontFamily="@font/be_vietnam_medium"
+        android:text="Cơm gà nướng mật ong"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +95,13 @@
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
