--- a/app/src/main/res/layout/item_hot_products.xml
+++ b/app/src/main/res/layout/item_hot_products.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/bg_borders_sp"
-    android:layout_width="match_parent"
-    android:layout_marginTop="10dp"
-    android:layout_marginHorizontal="8dp"
     android:id="@+id/layout_item_product_hot"
-    android:layout_height="120dp">
+    android:layout_width="match_parent"
+    android:layout_height="120dp"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/bg_borders_sp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView6"
@@ -34,8 +34,8 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="25dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
         android:fontFamily="@font/be_vietnam_medium"
         android:text="Cơm gà nướng mật ong"
         android:textColor="#000000"
@@ -56,8 +56,11 @@
         android:textColor="#000000 "
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline36"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/cardView6"
-        app:layout_constraintTop_toBottomOf="@+id/tv_timehot" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_timehot"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView26"
@@ -78,6 +81,8 @@
         android:layout_marginTop="5dp"
         android:text="15 - 20 phút"
         android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline36"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView26"
         app:layout_constraintTop_toBottomOf="@+id/tvProductNameHot" />
 
@@ -90,4 +95,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_corner_radius_top_right="6dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75" />
 </androidx.constraintlayout.widget.ConstraintLayout>
