--- a/app/src/main/res/layout/item_vertical_products.xml
+++ b/app/src/main/res/layout/item_vertical_products.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="15dp"
+    android:id="@+id/layout_item_product_new_combo"
     android:layout_width="175dp"
     android:layout_height="240dp"
-    android:id="@+id/layout_item_product_new_combo"
+    android:layout_marginLeft="15dp"
+    android:layout_marginTop="10dp"
     android:background="@drawable/bg_borders_sp">
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -21,15 +21,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_corner_radius="3dp" />
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
-        app:riv_corner_radius_top_left="6dp"
         android:src="@drawable/img_promo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:riv_corner_radius_top_left="6dp" />
 
     <TextView
         android:id="@+id/tvNamePoduct"
@@ -37,13 +38,14 @@
         android:layout_height="55dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
-        android:text="Cơm gà nướng mật ong"
         android:fontFamily="@font/be_vietnam_medium"
+        android:text="Cơm gà nướng mật ong"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgProduct" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="20dp"
@@ -58,8 +60,8 @@
         android:id="@+id/tvMassPoduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/be_vietnam_medium"
         android:text="15 phút"
         android:textColor="#7C7C7C"
@@ -74,8 +76,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="45.000 đ"
         android:fontFamily="@font/be_vietnam_medium"
+        android:text="45.000 đ"
         android:textColor="#000000"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +93,16 @@
         android:layout_marginBottom="15dp"
         android:src="@drawable/add_item"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.857"
+        app:layout_constraintStart_toStartOf="@+id/guideline33" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5514286" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
