--- a/app/src/main/res/layout/item_vertical_products_new.xml
+++ b/app/src/main/res/layout/item_vertical_products_new.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="15dp"
+    android:id="@+id/layout_item_product_new"
     android:layout_width="175dp"
     android:layout_height="240dp"
-    android:id="@+id/layout_item_product_new"
+    android:layout_marginLeft="15dp"
+    android:layout_marginTop="10dp"
     android:background="@drawable/bg_borders_sp">
 
 
@@ -17,21 +17,21 @@
         android:layout_marginHorizontal="7dp"
         android:layout_marginTop="7dp"
         android:scaleType="centerCrop"
-        app:riv_corner_radius="3dp"
         android:src="@drawable/img_sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:riv_corner_radius="3dp" />
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
-        app:riv_corner_radius_top_left="6dp"
         android:src="@drawable/img_promo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:riv_corner_radius_top_left="6dp" />
 
     <TextView
         android:id="@+id/tvNamePoductNew"
@@ -39,8 +39,8 @@
         android:layout_height="55dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
-        android:text="Cơm gà nướng mật ong"
         android:fontFamily="@font/be_vietnam_medium"
+        android:text="Cơm gà nướng mật ong"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,8 +77,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="45.000 đ"
         android:fontFamily="@font/be_vietnam_medium"
+        android:text="45.000 đ"
         android:textColor="#000000"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,14 +90,20 @@
         android:id="@+id/imgBuyPoductNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:src="@drawable/add_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.893"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guideline31" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.55" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
