--- a/app/src/main/res/layout/item_viewalldetail_products.xml
+++ b/app/src/main/res/layout/item_viewalldetail_products.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="10dp"
-    android:layout_marginHorizontal="8dp"
+    android:id="@+id/layout_ViewAll"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:id="@+id/layout_ViewAll"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginTop="10dp"
     android:background="@drawable/bg_borders_sp">
 
     <androidx.cardview.widget.CardView
@@ -28,15 +28,16 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:fontFamily="@font/be_vietnam_medium"
         android:id="@+id/tv_vall_tensp"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/be_vietnam_medium"
         android:text="Cơm gà nướng mật ong"
         android:textColor="#000000"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline27"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toEndOf="@+id/cardView5"
@@ -46,18 +47,17 @@
         android:id="@+id/imageView"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginStart="15dp"
         android:src="@drawable/ic_clock"
         app:layout_constraintBottom_toBottomOf="@+id/tv_vall_time"
-        app:layout_constraintStart_toEndOf="@+id/cardView5"
+        app:layout_constraintStart_toStartOf="@+id/guideline28"
         app:layout_constraintTop_toTopOf="@+id/tv_vall_time" />
 
     <TextView
         android:id="@+id/tv_vall_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/be_vietnam_medium"
         android:text="2gam"
         android:textColor="#7C7C7C"
@@ -89,7 +89,30 @@
         android:layout_marginBottom="15dp"
         android:src="@drawable/add_item"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.981"
+        app:layout_constraintStart_toStartOf="@+id/guideline26" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75443035" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline28"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.42" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
